<resources>
    <string name="login">LOGIN</string>
    <string name="sgnup">SIGN UP</string>
    <string name="back">BACK</string>
    <string name="enterEmail">Email</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="resetPassword">Reset Password</string>
    <string name="title_activity_food_search">FoodSearch</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
