<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textViewEnterEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="62dp"
        android:layout_marginStart="12dp"
        android:gravity="center"
        android:text="Enter your email to reset your password"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/resetPasswordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTextView" />

    <EditText
        android:id="@+id/resetPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/resetPasswordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEnterEmailAddress" />

    <Button
        android:id="@+id/resetPasswordButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:layout_marginStart="36dp"
        android:text="@string/resetPassword"
        app:layout_constraintBottom_toTopOf="@+id/backButtton"
        app:layout_constraintStart_toStartOf="@+id/resetPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/resetPasswordEditText" />

    <Button
        android:id="@+id/backButtton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="51dp"
        android:layout_marginStart="28dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/resetPasswordButton"
        app:layout_constraintTop_toBottomOf="@+id/resetPasswordButton" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="22dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/forgotPassword"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewEnterEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heartlogo" />

    <ImageView
        android:id="@+id/heartlogo"
        android:layout_width="184dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/forgotPasswordTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heartlogo" /><![CDATA[

    151dp" />
]]>
</android.support.constraint.ConstraintLayout>